--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <script type="text/javascript">
 
-  var vis1 = "https://raw.githubusercontent.com/dvek0001/FIT3179/main/js/departdelay.vg.json";
-  var vis3 = "https://raw.githubusercontent.com/dvek0001/FIT3179/main/js/bump.vg.json";
+  var vis1 = "js/departdelay.vg.json";
+  var vis3 = "js/bump.vg.json";
   vegaEmbed('#depart_flow_map', vis1).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
