--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
   
   <script type="text/javascript">
-    var specVis1 = "js/map.vg.json";
-    var specVis2= "js/bump.vg.json";
-    var specVis3= "js/heatmap.vg.json";
-    var specVis4= "js/area.vg.json";
+    var specVis1 = "https://dvek0001.github.io/FIT3179/js/map.vg.json";
+    var specVis2= "https://dvek0001.github.io/FIT3179/js/bump.vg.json";
+    var specVis3= "https://dvek0001.github.io/FIT3179/js/heatmap.vg.json";
+    var specVis4= "https://dvek0001.github.io/FIT3179/js/area.vg.json";
   
     vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
