--- a/index.html
+++ b/index.html
@@ -26,24 +26,21 @@
     <h1>US FLIGHT DELAYS AND CANCELLATION</h1>
     <div class="container">
       <h2>Flights Delayed During Departure and Arrival</h2>
-      <p style="font-size: 22px;">
-        From the line chart below we see that flights are more likely to be delayed when Christmas is close.
-      </p>
-      <p style="font-style: italic; font-size: 15px;">
-        Select an interval in the line chart to filter out the dates in the maps.
+      <p style="font-size: 25px;">
+        <span class="bold">
+          Flights departing from Hartsfield-Jackson Atlanta International Airport (ATL) were delayed more on the day of Chrismas Eve (Decemeber 24).
+        </span> On this day, flights <span class="departdelay">departed 38 minutes</span> later than scheduled on average and <span class="arrivedelay">arrived 35 minutes</span> later than scheduled.
+        <span></span>
       </p>
     </div>
     <div id="vis1"></div>
 
     <div class="container">
-      <div class="pure-g">
-        <div class="pure-u-1-2">
-          <p style="font-size: 22px;">Flights departing from ATL were delayed by at least 5 minutes on average. The most delayed flights during departure in 2015 were flights that were travelling to John F. Kennedy International Airport in New York, being delayed by 17 minutes on average.</p>
-        </div>
-        <div class="pure-u-1-2">
-          <p style="margin-left: 12px; font-size: 22px;">Flights arriving in ATL are usually on time. However, there are a some flights that actually arrived later than the scheduled arrival time and a few flights that arrived earlier than the scheduled time on average. </p>
-        </div>
-      </div>
+      <p style="font-size: 25px;">
+        Flights departing from ATL are delayed by at least 5 minutes on average. 
+        However, it is possible that the delay during arrival (Arrival Delay) is less than the delay during departure (Departure Delay). 
+        In Decemeber, flights travelling to Seattle-Tacoma International Airport (SEA) departed 15 minutes later than the scheduled departure time, but they arrived 10 minutes later than the scheduled arrival.
+      </p>
     </div>
     
 
@@ -66,10 +63,9 @@
 
   
   <script type="text/javascript">
-    var specVis1 = "https://dvek0001.github.io/FIT3179/js/map.vg.json";
-    var specVis2= "https://dvek0001.github.io/FIT3179/js/bump.vg.json";
-    var specVis3= "https://dvek0001.github.io/FIT3179/js/heatmap.vg.json";
-    var specVis4= "https://dvek0001.github.io/FIT3179/js/area.vg.json";
+    var specVis1 = "js/map.vg.json";
+    var specVis2= "js/bump.vg.json";
+    var specVis3= "js/bar.vg.json";
   
     vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -80,10 +76,6 @@
     }).catch(console.error);
 
     vegaEmbed('#vis3', specVis3, {"actions": false}).then(function(result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
-    vegaEmbed('#vis4', specVis4, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
   </script>
