--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         However, due to some unforeseen circumstances, flights can be delayed or cancelled. 
       </p>
       <p>
-        This visualisation provides information on <span class="bold">how much US flights were delayed and how often the flights were cancelled, as well as giving reasons for delays and cancellations for the year 2015</span>.
+        This visualisation provides information on <span class="bold">how much US flights departing from Hartsfield-Jackson Atlanta International Airport (ATL) were delayed and how often the flights were cancelled, as well as giving reasons for delays and cancellations for the year 2015</span>.
       </p>
       <p style="font-weight: bold; font-style: italic; font-size: 20px;">Note: Information for October 2015 is missing</p>
     </div>
