--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         This means <span class="bold">on the day of Christmas Eve, <span class="NK">Spirit Airlines</span> flights and <span class="UA">United Airlines</span> flights are more likely to be delayed longer than any other airline's flights.</span>
       </p>
       <p>
-        <span class="NK">Spirit Airlines (NK)</span> flights <span class="departdelay">departed 27 minutes late</span> and <span class="arrivedelay">arrived to their destinations 29 minutes late</span>.
+        <span class="NK">Spirit Airlines</span> flights <span class="departdelay">departed 27 minutes late</span> and <span class="arrivedelay">arrived to their destinations 29 minutes late</span>.
         <span class="NK">Spirit Airlines</span> has been in the top 3 most delayed Airlines since April.
       </p>
       <p>
@@ -97,6 +97,10 @@
         <span class="bold">Although <span class="MQ">American Eagle Airlines (MQ)</span> was not one of the most delayed airlines all the time, it was the top airline for <span class="cancel">cancellations</span> in 2015.</span>
         <span class="bold">8.8%</span> of <span class="MQ">American Eagle Airlines</span> flights were <span class="cancel">cancelled</span>. 
         <span class="airline">2.93%</span> of flights were <span class="cancel">cancelled</span> due to <span class="airline">Airline/Carrier</span>, <span class="airsystem">2.93%</span> <span class="cancel">cancelled</span> due to <span class="airsystem">National Air System</span> and <span class="weather">2.93%</span> <span class="cancel">cancelled</span> due to <span class="weather">Weather</span>.
+      </p>
+      <p>
+        <span class="bold">Although <span class="NK">Spirit Airlines (NK)</span> and <span class="UA">United Airlines (UA)</span> flights were delayed longer than any other flights in December 2015, these airlines did not have the most cancelled flights in December.</span>
+        <span class="NK">Spirit Airlines</span> had the second most cancellations in December.
       </p>
       <p>
         <span class="OO">Skywest Airlines (OO)</span> had the most <span class="cancel">cancelled</span> flights in <span class="bold">December 2015 (4.79%)</span>. 
